[project]
name = "biokit"
version = "1.0"
dependencies = [
    "numpy","scipy","matplotlib","pandas", # Base dependency
    "bed-reader", # For greader.py
    "adjustText", # For pcshow.py
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biokit"]